src/wrapper/torch_api_generated.h

void atg_sub_(tensor *, tensor self, tensor other);
void atg_sub_1(tensor *, tensor self, scalar other);
void atg_sub_out(tensor *, tensor result, tensor self, tensor other);
void atg_sum1(tensor *, tensor self, int dtype);
void atg_sum2(tensor *, tensor self);
void atg_sum3(tensor *, tensor self, long int *dim_data, int dim_len, int keepdim, int dtype);
void atg_sum4(tensor *, tensor self, long int *dim_data, int dim_len, int keepdim);
void atg_sum5(tensor *, tensor self, long int *dim_data, int dim_len, int dtype);
void atg_sum_out1(tensor *, tensor result, tensor self, long int *dim_data, int dim_len, int keepdim, int dtype);
void atg_sum_out2(tensor *, tensor result, tensor self, long int *dim_data, int dim_len, int keepdim);
void atg_sum_out3(tensor *, tensor result, tensor self, long int *dim_data, int dim_len, int dtype);
void atg_svd(tensor *, tensor self, int some);
void atg_svd_out(tensor *, tensor res1, tensor res2, tensor res3, tensor self, int some);
void atg_symeig(tensor *, tensor self, int eigenvectors, int upper);
void atg_symeig_out(tensor *, tensor res1, tensor res2, tensor self, int eigenvectors, int upper);
void atg_t_(tensor *, tensor self);
void atg_take(tensor *, tensor self, tensor index);
void atg_take_out(tensor *, tensor result, tensor self, tensor index);
void atg_tan(tensor *, tensor self);
void atg_tan_(tensor *, tensor self);
void atg_tan_out(tensor *, tensor result, tensor self);
void atg_tanh(tensor *, tensor self);
void atg_tanh_(tensor *, tensor self);
void atg_tanh_out(tensor *, tensor result, tensor self);
void atg_tensordot(tensor *, tensor self, tensor other, long int *dims_self_data, int dims_self_len, long int *dims_other_data, int dims_other_len);
void atg_th_addmm(tensor *, tensor self, tensor mat1, tensor mat2);
void atg_th_addmm_(tensor *, tensor self, tensor mat1, tensor mat2);
void atg_th_addmm_out(tensor *, tensor result, tensor self, tensor mat1, tensor mat2);
void atg_th_clone(tensor *, tensor self);
void atg_th_resize_as_(tensor *, tensor self, tensor the_template);
void atg_th_zero_(tensor *, tensor self);
void atg_to1(tensor *, tensor self, int device);
void atg_to2(tensor *, tensor self, int device, int dtype, int non_blocking);
void atg_to3(tensor *, tensor self, int dtype, int non_blocking);
void atg_to4(tensor *, tensor self, int device, int non_blocking);
void atg_to5(tensor *, tensor self, tensor other, int non_blocking);
void atg_to_dense(tensor *, tensor self);
void atg_topk(tensor *, tensor self, int64_t k, int64_t dim, int largest, int sorted);
void atg_topk_out(tensor *, tensor values, tensor indices, tensor self, int64_t k, int64_t dim, int largest, int sorted);
void atg_totype(tensor *, tensor self, int scalar_type);
void atg_transpose(tensor *, tensor self, int64_t dim0, int64_t dim1);
void atg_transpose_(tensor *, tensor self, int64_t dim0, int64_t dim1);
void atg_tril(tensor *, tensor self, int64_t diagonal);
void atg_tril_(tensor *, tensor self, int64_t diagonal);
void atg_tril_out(tensor *, tensor result, tensor self, int64_t diagonal);
void atg_triplet_margin_loss(tensor *, tensor anchor, tensor positive, tensor negative, double margin, double p, double eps, int swap, int64_t reduction);
void atg_triu(tensor *, tensor self, int64_t diagonal);
void atg_triu_(tensor *, tensor self, int64_t diagonal);
void atg_triu_out(tensor *, tensor result, tensor self, int64_t diagonal);
void atg_trtrs(tensor *, tensor self, tensor A, int upper, int transpose, int unitriangular);
void atg_trtrs_out(tensor *, tensor res1, tensor res2, tensor self, tensor A, int upper, int transpose, int unitriangular);
void atg_trunc(tensor *, tensor self);
void atg_trunc_(tensor *, tensor self);
void atg_trunc_out(tensor *, tensor result, tensor self);
void atg_type_as(tensor *, tensor self, tensor other);
void atg_unfold(tensor *, tensor self, int64_t dimension, int64_t size, int64_t step);
void atg_uniform_(tensor *, tensor self, double from, double to);
void atg_unsqueeze(tensor *, tensor self, int64_t dim);
void atg_unsqueeze_(tensor *, tensor self, int64_t dim);
void atg_upsample_bilinear2d(tensor *, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_bilinear2d_backward(tensor *, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len, int align_corners);
void atg_upsample_bilinear2d_backward_out(tensor *, tensor grad_input, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len, int align_corners);
void atg_upsample_bilinear2d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_bilinear2d_forward_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_bilinear2d_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_linear1d(tensor *, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_linear1d_backward(tensor *, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len, int align_corners);
void atg_upsample_linear1d_backward_out(tensor *, tensor grad_input, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len, int align_corners);
void atg_upsample_linear1d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_linear1d_forward_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_linear1d_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_nearest1d(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest1d_backward(tensor *, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len);
void atg_upsample_nearest1d_backward_out(tensor *, tensor grad_input, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len);
void atg_upsample_nearest1d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest1d_forward_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest1d_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest2d(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest2d_backward(tensor *, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len);
void atg_upsample_nearest2d_backward_out(tensor *, tensor grad_input, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len);
void atg_upsample_nearest2d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest2d_forward_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest2d_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest3d(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest3d_backward(tensor *, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len);
void atg_upsample_nearest3d_backward_out(tensor *, tensor grad_input, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len);
void atg_upsample_nearest3d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest3d_forward_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_nearest3d_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_upsample_trilinear3d(tensor *, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_trilinear3d_backward(tensor *, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len, int align_corners);
void atg_upsample_trilinear3d_backward_out(tensor *, tensor grad_input, tensor grad_output, long int *output_size_data, int output_size_len, long int *input_size_data, int input_size_len, int align_corners);
void atg_upsample_trilinear3d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_trilinear3d_forward_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_upsample_trilinear3d_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len, int align_corners);
void atg_var1(tensor *, tensor self, int unbiased);
void atg_var2(tensor *, tensor self, int64_t dim, int unbiased, int keepdim);
void atg_var_out(tensor *, tensor result, tensor self, int64_t dim, int unbiased, int keepdim);
void atg_view(tensor *, tensor self, long int *size_data, int size_len);
void atg_view_as(tensor *, tensor self, tensor other);
void atg_where(tensor *, tensor condition, tensor self, tensor other);
void atg_zero_(tensor *, tensor self);
void atg_zeros(tensor *, long int *size_data, int size_len, int options_kind, int options_device);
void atg_zeros_like1(tensor *, tensor self);