src/stubs/torch_bindings_generated.ml


  let sub_ =
    foreign "atg_sub_"
    (ptr t @-> t @-> t @-> returning void)

  let sub_1 =
    foreign "atg_sub_1"
    (ptr t @-> t @-> scalar @-> returning void)

  let sub_out =
    foreign "atg_sub_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let sum1 =
    foreign "atg_sum1"
    (ptr t @-> t @-> int @-> returning void)

  let sum2 =
    foreign "atg_sum2"
    (ptr t @-> t @-> returning void)

  let sum3 =
    foreign "atg_sum3"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> int @-> returning void)

  let sum4 =
    foreign "atg_sum4"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let sum5 =
    foreign "atg_sum5"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let sum_out1 =
    foreign "atg_sum_out1"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> int @-> returning void)

  let sum_out2 =
    foreign "atg_sum_out2"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let sum_out3 =
    foreign "atg_sum_out3"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let svd =
    foreign "atg_svd"
    (ptr t @-> t @-> int @-> returning void)

  let svd_out =
    foreign "atg_svd_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int @-> returning void)

  let symeig =
    foreign "atg_symeig"
    (ptr t @-> t @-> int @-> int @-> returning void)

  let symeig_out =
    foreign "atg_symeig_out"
    (ptr t @-> t @-> t @-> t @-> int @-> int @-> returning void)

  let t_ =
    foreign "atg_t_"
    (ptr t @-> t @-> returning void)

  let take =
    foreign "atg_take"
    (ptr t @-> t @-> t @-> returning void)

  let take_out =
    foreign "atg_take_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let tan =
    foreign "atg_tan"
    (ptr t @-> t @-> returning void)

  let tan_ =
    foreign "atg_tan_"
    (ptr t @-> t @-> returning void)

  let tan_out =
    foreign "atg_tan_out"
    (ptr t @-> t @-> t @-> returning void)

  let tanh =
    foreign "atg_tanh"
    (ptr t @-> t @-> returning void)

  let tanh_ =
    foreign "atg_tanh_"
    (ptr t @-> t @-> returning void)

  let tanh_out =
    foreign "atg_tanh_out"
    (ptr t @-> t @-> t @-> returning void)

  let tensordot =
    foreign "atg_tensordot"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let th_addmm =
    foreign "atg_th_addmm"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let th_addmm_ =
    foreign "atg_th_addmm_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let th_addmm_out =
    foreign "atg_th_addmm_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let th_clone =
    foreign "atg_th_clone"
    (ptr t @-> t @-> returning void)

  let th_resize_as_ =
    foreign "atg_th_resize_as_"
    (ptr t @-> t @-> t @-> returning void)

  let th_zero_ =
    foreign "atg_th_zero_"
    (ptr t @-> t @-> returning void)

  let to1 =
    foreign "atg_to1"
    (ptr t @-> t @-> int @-> returning void)

  let to2 =
    foreign "atg_to2"
    (ptr t @-> t @-> int @-> int @-> int @-> returning void)

  let to3 =
    foreign "atg_to3"
    (ptr t @-> t @-> int @-> int @-> returning void)

  let to4 =
    foreign "atg_to4"
    (ptr t @-> t @-> int @-> int @-> returning void)

  let to5 =
    foreign "atg_to5"
    (ptr t @-> t @-> t @-> int @-> returning void)

  let to_dense =
    foreign "atg_to_dense"
    (ptr t @-> t @-> returning void)

  let topk =
    foreign "atg_topk"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int @-> int @-> returning void)

  let topk_out =
    foreign "atg_topk_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> int @-> int @-> returning void)

  let totype =
    foreign "atg_totype"
    (ptr t @-> t @-> int @-> returning void)

  let transpose =
    foreign "atg_transpose"
    (ptr t @-> t @-> int64_t @-> int64_t @-> returning void)

  let transpose_ =
    foreign "atg_transpose_"
    (ptr t @-> t @-> int64_t @-> int64_t @-> returning void)

  let tril =
    foreign "atg_tril"
    (ptr t @-> t @-> int64_t @-> returning void)

  let tril_ =
    foreign "atg_tril_"
    (ptr t @-> t @-> int64_t @-> returning void)

  let tril_out =
    foreign "atg_tril_out"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let triplet_margin_loss =
    foreign "atg_triplet_margin_loss"
    (ptr t @-> t @-> t @-> t @-> double @-> double @-> double @-> int @-> int64_t @-> returning void)

  let triu =
    foreign "atg_triu"
    (ptr t @-> t @-> int64_t @-> returning void)

  let triu_ =
    foreign "atg_triu_"
    (ptr t @-> t @-> int64_t @-> returning void)

  let triu_out =
    foreign "atg_triu_out"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let trtrs =
    foreign "atg_trtrs"
    (ptr t @-> t @-> t @-> int @-> int @-> int @-> returning void)

  let trtrs_out =
    foreign "atg_trtrs_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int @-> int @-> int @-> returning void)

  let trunc =
    foreign "atg_trunc"
    (ptr t @-> t @-> returning void)

  let trunc_ =
    foreign "atg_trunc_"
    (ptr t @-> t @-> returning void)

  let trunc_out =
    foreign "atg_trunc_out"
    (ptr t @-> t @-> t @-> returning void)

  let type_as =
    foreign "atg_type_as"
    (ptr t @-> t @-> t @-> returning void)

  let unfold =
    foreign "atg_unfold"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int64_t @-> returning void)

  let uniform_ =
    foreign "atg_uniform_"
    (ptr t @-> t @-> double @-> double @-> returning void)

  let unsqueeze =
    foreign "atg_unsqueeze"
    (ptr t @-> t @-> int64_t @-> returning void)

  let unsqueeze_ =
    foreign "atg_unsqueeze_"
    (ptr t @-> t @-> int64_t @-> returning void)

  let upsample_bilinear2d =
    foreign "atg_upsample_bilinear2d"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_bilinear2d_backward =
    foreign "atg_upsample_bilinear2d_backward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let upsample_bilinear2d_backward_out =
    foreign "atg_upsample_bilinear2d_backward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let upsample_bilinear2d_forward =
    foreign "atg_upsample_bilinear2d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_bilinear2d_forward_out =
    foreign "atg_upsample_bilinear2d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_bilinear2d_out =
    foreign "atg_upsample_bilinear2d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_linear1d =
    foreign "atg_upsample_linear1d"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_linear1d_backward =
    foreign "atg_upsample_linear1d_backward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let upsample_linear1d_backward_out =
    foreign "atg_upsample_linear1d_backward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let upsample_linear1d_forward =
    foreign "atg_upsample_linear1d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_linear1d_forward_out =
    foreign "atg_upsample_linear1d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_linear1d_out =
    foreign "atg_upsample_linear1d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_nearest1d =
    foreign "atg_upsample_nearest1d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest1d_backward =
    foreign "atg_upsample_nearest1d_backward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let upsample_nearest1d_backward_out =
    foreign "atg_upsample_nearest1d_backward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let upsample_nearest1d_forward =
    foreign "atg_upsample_nearest1d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest1d_forward_out =
    foreign "atg_upsample_nearest1d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest1d_out =
    foreign "atg_upsample_nearest1d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest2d =
    foreign "atg_upsample_nearest2d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest2d_backward =
    foreign "atg_upsample_nearest2d_backward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let upsample_nearest2d_backward_out =
    foreign "atg_upsample_nearest2d_backward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let upsample_nearest2d_forward =
    foreign "atg_upsample_nearest2d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest2d_forward_out =
    foreign "atg_upsample_nearest2d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest2d_out =
    foreign "atg_upsample_nearest2d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest3d =
    foreign "atg_upsample_nearest3d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest3d_backward =
    foreign "atg_upsample_nearest3d_backward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let upsample_nearest3d_backward_out =
    foreign "atg_upsample_nearest3d_backward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let upsample_nearest3d_forward =
    foreign "atg_upsample_nearest3d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest3d_forward_out =
    foreign "atg_upsample_nearest3d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_nearest3d_out =
    foreign "atg_upsample_nearest3d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let upsample_trilinear3d =
    foreign "atg_upsample_trilinear3d"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_trilinear3d_backward =
    foreign "atg_upsample_trilinear3d_backward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let upsample_trilinear3d_backward_out =
    foreign "atg_upsample_trilinear3d_backward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let upsample_trilinear3d_forward =
    foreign "atg_upsample_trilinear3d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_trilinear3d_forward_out =
    foreign "atg_upsample_trilinear3d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let upsample_trilinear3d_out =
    foreign "atg_upsample_trilinear3d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> int @-> returning void)

  let var1 =
    foreign "atg_var1"
    (ptr t @-> t @-> int @-> returning void)

  let var2 =
    foreign "atg_var2"
    (ptr t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let var_out =
    foreign "atg_var_out"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let view =
    foreign "atg_view"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let view_as =
    foreign "atg_view_as"
    (ptr t @-> t @-> t @-> returning void)

  let where =
    foreign "atg_where"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let zero_ =
    foreign "atg_zero_"
    (ptr t @-> t @-> returning void)

  let zeros =
    foreign "atg_zeros"
    (ptr t @-> ptr long @-> int @-> int @-> int @-> returning void)

  let zeros_like1 =
    foreign "atg_zeros_like1"
    (ptr t @-> t @-> returning void)
